# Rethined-Implementation

./: .gitignore  blocks.py  coarse.py  device_utils.py  discriminator.py  distributed_utils.py  evaluate.py  hr.py  model.py  patchmatch.py  pyproject.toml  render_samples.py  train.py
configs/: main_512.yaml  overfit_supercaf_1024_from_512.yaml  pilot_512.yaml  pilot_supercaf_1024_to_512_paper.yaml  train_df2k_512.yaml  train_supercaf_1024_to_512_paper.yaml  train_supercaf_1024_to_512_papercoarse_ultrafast.yaml  train_supercaf_1024_to_512_v2.yaml  train_supercaf_256_overfit_coarse_only.yaml  train_supercaf_256_overfit_fast.yaml  train_supercaf_256_overfit_fast_patch.yaml  train_supercaf_256_overfit_refine_only.yaml  train_supercaf_512.yaml  train_supercaf_512_full.yaml  train_supercaf_512_fusion_20k.yaml  train_supercaf_512_fusion_20k_anchor.yaml  train_supercaf_512_fusion_oracle_pilot.yaml  train_supercaf_512_hybrid_retrieval_synthesis_pilot.yaml  train_supercaf_512_oracle_distill_pilot.yaml  train_supercaf_512_overfit_coarse_only.yaml  train_supercaf_512_overfit_fast.yaml  train_supercaf_512_overfit_fast_patch.yaml  train_supercaf_512_overfit_l1.yaml  train_supercaf_512_overfit_l1_freeze_coarse.yaml  train_supercaf_512_overfit_refine_only.yaml  train_supercaf_512_paper_mask_direct_mix_pilot.yaml  train_supercaf_512_paper_mask_joint_pilot.yaml  train_supercaf_512_paper_refiner_fastpilot.yaml  train_supercaf_512_paper_refiner_pilot.yaml  train_supercaf_512_papercoarse_ultrafast.yaml  train_supercaf_512_patch_pilot.yaml  train_supercaf_512_patch_pilot_fast.yaml  (+10 more)
(+36 files in other folders)
