[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rethined_inpainting"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "einops",
    "kornia",
    "lpips",
    "clean-fid",
    "scikit-image",
    "tqdm",
    "pyyaml",
    "tensorboard",
    "Pillow",
    "opencv-python-headless",
]
